Fix java 8 compatibility